--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,12 @@
      "@mcp-ui/client": "^5.14.1",
     "@modelcontextprotocol/sdk": "^0.6.0",
     "react": "^18.3.0",
-    "react-dom": "^18.3.0"
+    "react-dom": "^18.3.0",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.0",
