--- a/server/package.json
+++ b/server/package.json
@@ -10,13 +10,15 @@
         "@mcp-ui/server": "^5.13.1",
         "axios": "^1.13.2",
         "cors": "^2.8.5",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "pg": "^8.16.3"
     },
     "devDependencies": {
         "@types/axios": "^0.9.36",
         "@types/cors": "^2.8.19",
         "@types/express": "^4.17.17",
         "@types/node": "^20.19.25",
+        "@types/pg": "^8.15.6",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.9.3"
     }
