--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
+    "chart.js": "^4.5.1",
     "react": "^18.3.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.3.0",
     "react-router-dom": "^7.10.0"
   },
